--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -3,8 +3,8 @@
 <head>
     <style>
         body {
-            margin 0;
-            padding 0;
+            margin: 0;
+            padding: 0;
         }
         header {
             background-color: #FF0000;
