--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -27,10 +27,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
 </head>
-<body style="
-margin: 0;
-padding: 0;
-">
+<body>
     <header>
     </header>
     <footer>
