--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/3-header.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
     <title>AirBnB Clone</title>
-    <link rel="icon" type="image/x-icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png">
+    <link rel="icon" type="image/x-icon" href="./images/icon.png">
 </head>
 <body>
     <header>
